--- a/podcasts.html
+++ b/podcasts.html
@@ -547,6 +547,14 @@
                 <div class="podcast-title">Guide to the Zipper Economy</div>
                 <div class="podcast-description">A review of the 2024 "Guide to the Zipper Economy".</div>
             </div>
+            <div class="podcast-card" onclick="playPodcast('Jokes.wav')">
+              <div class="podcast-title">Jokes</div>
+              <div class="podcast-description">Listen to some bad jokes in this podcast episode.</div>
+          </div>
+          <div class="podcast-card" onclick="playPodcast('The Gusian Language Guide.wav')">
+            <div class="podcast-title">The Gusian Language</div>
+            <div class="podcast-description">A review of "The Gusian Language" A language spoken in The Gusian Kingdoms.</div>
+        </div>
         </div>
 
         <!-- Copyright -->
