--- a/404.html
+++ b/404.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-
-      <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
-  <style media="screen" type="text/css">
+<meta charset="utf-8"/>
+<link href="favicon.ico" rel="icon" type="image/x-icon"/>
+<!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
+<style media="screen" type="text/css">
     .layer1_class {
       position: absolute;
       z-index: 1;
@@ -161,8 +161,8 @@
       }
     }
   </style>
-  <!-- Styles for the No-JavaScript message -->
-  <style>
+<!-- Styles for the No-JavaScript message -->
+<style>
     .no-js-message {
       background: #2c4762;
       color: red;
@@ -175,22 +175,20 @@
       top: 0;
     }
   </style>
-
-  <!-- No-JavaScript message -->
-  <noscript>
-    <div class="no-js-message">
+<!-- No-JavaScript message -->
+<noscript>
+<div class="no-js-message">
       Please enable JavaScript to use this website properly.
     </div>
-  </noscript>
-  <div class="loader">
-    <div class="loaderr-container">
-      <div class="loaderr"></div>
-      <div class="loading-text">Loading...</div>
-    </div>
-  </div>
+</noscript>
+<div class="loader">
+<div class="loaderr-container">
+<div class="loaderr"></div>
+<div class="loading-text">Loading...</div>
+</div>
+</div>
 
-  </div>
-  <script>
+<script>
     // This function will execute after the full page has finished loading
     window.onload = function () {
       // Trigger fade-out animation for the loader
@@ -205,11 +203,10 @@
 
     }
   </script>
-  <!--______________________________END OF LOADING AND NOSCRIPT____________________________________-->
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Page Not Found</title>
-    <style>
+<!--______________________________END OF LOADING AND NOSCRIPT____________________________________-->
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>404 - Page Not Found</title>
+<style>
         body {
             font-family: 'Comic Sans MS', cursive, sans-serif;
             background-color: #ffe066;
@@ -279,27 +276,26 @@
         }
     }
 </style>
-
-</head>
+<meta content="Title: 404 - Page Not Found 404 Please enable JavaScript to use this website properly . it seems you've found a page that doesn't exist . Learn more at Unlim8ted Studio Productions." name="description"/></head>
 <body>
-    <div id="inner-wrap">
-        <div class="logo" style="z-index: 2;">
-          <a href="/">
-            <img src="images/logo/logo.png"> <!--https://images.unlim8ted.com/logo/logo.png-->
-          </a>
-        </div>
-    <div class="container">
-        <h1>404</h1>
-        <p>Well, this is awkward...</p>
-        <img src="https://via.placeholder.com/400x200?text=Oops%21+Not+Found" alt="404 Image">
-        <p>It seems you've found a page that doesn't exist. It's either hiding or was eaten by a cat. 🐱</p>
-        <a href="javascript:history.back()" class="back-button">Take Me Back to Reality</a>
-        <p class="funny-text">P.S. Try checking under your couch. Maybe the page fell there. 🛋️</p>
-    </div>
-</body>
-    <!-- Copyright -->
-    <div style="margin-top: 20px;">
-        <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
-      </div>
-    </div>
+<div id="inner-wrap">
+<div class="logo" style="z-index: 2;">
+<a href="/">
+<img src="images/logo/logo.png"/> <!--https://images.unlim8ted.com/logo/logo.png-->
+</a>
+</div>
+<div class="container">
+<h1>404</h1>
+<p>Well, this is awkward...</p>
+<img alt="404 Image" src="https://via.placeholder.com/400x200?text=Oops%21+Not+Found"/>
+<p>It seems you've found a page that doesn't exist. It's either hiding or was eaten by a cat. 🐱</p>
+<a class="back-button" href="javascript:history.back()">Take Me Back to Reality</a>
+<p class="funny-text">P.S. Try checking under your couch. Maybe the page fell there. 🛋️</p>
+</div>
+</div></body>
+<!-- Copyright -->
+<div style="margin-top: 20px;">
+<p>© 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+</div>
+
 </html>
