--- a/podcasts/ad.html
+++ b/podcasts/ad.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Neon Product Layout</title>
 <style>
     /* Basic Reset */
@@ -130,51 +131,46 @@
         right: 280px;
     }
 </style>
-</head>
+<meta content="Unlim8ted Ad, Part of an unlimt8ed ad. Learn more at Unlim8ted Studio Productions." name="description"/></head>
 <body>
-
 <div class="container">
 <!-- Product 1 -->
 <div class="product">
-    <div class="product-box">
-        <img src="images/products/films/The Life Of A Meatball.jpg" alt="Product 1 Image">
-    </div>
-    <div class="line"></div>
-    <div class="product-details">
-        <h2>The Life of a Meatball - Short Film</h2>
-        <p>Deep within the Tasmanian Jungles lie meatball factories. These factories produce meatballs, although something quite special can happen as shown in this captivating documentary.</p>
-        <span class="price">$0.00</span>
-    </div>
+<div class="product-box">
+<img alt="Product 1 Image" src="images/products/films/The Life Of A Meatball.jpg"/>
 </div>
-
+<div class="line"></div>
+<div class="product-details">
+<h2>The Life of a Meatball - Short Film</h2>
+<p>Deep within the Tasmanian Jungles lie meatball factories. These factories produce meatballs, although something quite special can happen as shown in this captivating documentary.</p>
+<span class="price">$0.00</span>
+</div>
+</div>
 <!-- Product 2 -->
 <div class="product">
-    <div class="product-box">
-        <img src="images/products/clothes/sfesehjkl_-removebg-preview.png" alt="Product 2 Image">
-    </div>
-    <div class="line"></div>
-    <div class="product-details">
-        <h2>Unlim8ted T-Shirt</h2>
-        <p>Stylish and comfortable, available now for a low price.</p>
-        <span class="price">$24.99</span>
-    </div>
+<div class="product-box">
+<img alt="Product 2 Image" src="images/products/clothes/sfesehjkl_-removebg-preview.png"/>
 </div>
-
+<div class="line"></div>
+<div class="product-details">
+<h2>Unlim8ted T-Shirt</h2>
+<p>Stylish and comfortable, available now for a low price.</p>
+<span class="price">$24.99</span>
+</div>
+</div>
 <!-- Product 3 -->
 <div class="product">
-    <div class="product-box">
-        <img src="images/products/films/TheGlitchCover.png" alt="Product 3 Image">
-    </div>
-    <div class="line"></div>
-    <div class="product-details">
-        <h2>The Glitch - Short Film</h2>
-        <p>An amazing short film about what "reality" actually means.</p>
-        <span class="price">$0.00</span>
-    </div>
+<div class="product-box">
+<img alt="Product 3 Image" src="images/products/films/TheGlitchCover.png"/>
 </div>
-
-
-    <!-- Add more products as needed -->
+<div class="line"></div>
+<div class="product-details">
+<h2>The Glitch - Short Film</h2>
+<p>An amazing short film about what "reality" actually means.</p>
+<span class="price">$0.00</span>
+</div>
+</div>
+<!-- Add more products as needed -->
 </div>
 <script>
     function smoothScroll(duration) {
@@ -215,6 +211,5 @@
         });
     });
 </script>
-
 </body>
 </html>
