--- a/success.html
+++ b/success.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Success</title>
-      <!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
-  <style media="screen" type="text/css">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Success</title>
+<!--______________________________START OF LOADING AND NOSCRIPT____________________________________-->
+<style media="screen" type="text/css">
     .layer1_class {
       position: absolute;
       z-index: 1;
@@ -161,8 +162,8 @@
       }
     }
   </style>
-  <!-- Styles for the No-JavaScript message -->
-  <style>
+<!-- Styles for the No-JavaScript message -->
+<style>
     .no-js-message {
       background: #2c4762;
       color: red;
@@ -175,22 +176,20 @@
       top: 0;
     }
   </style>
-
-  <!-- No-JavaScript message -->
-  <noscript>
-    <div class="no-js-message">
+<!-- No-JavaScript message -->
+<noscript>
+<div class="no-js-message">
       Please enable JavaScript to use this website properly.
     </div>
-  </noscript>
-  <div class="loader">
-    <div class="loaderr-container">
-      <div class="loaderr"></div>
-      <div class="loading-text">Loading...</div>
-    </div>
-  </div>
+</noscript>
+<div class="loader">
+<div class="loaderr-container">
+<div class="loaderr"></div>
+<div class="loading-text">Loading...</div>
+</div>
+</div>
 
-  </div>
-  <script>
+<script>
     // This function will execute after the full page has finished loading
     window.onload = function () {
       // Trigger fade-out animation for the loader
@@ -205,8 +204,8 @@
 
     }
   </script>
-  <!--______________________________END OF LOADING AND NOSCRIPT____________________________________-->
-    <style>
+<!--______________________________END OF LOADING AND NOSCRIPT____________________________________-->
+<style>
         body {
             display: flex;
             justify-content: center;
@@ -249,8 +248,8 @@
             background-color: #0056b3;
         }
     </style>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <style>  
+<link href="favicon.ico" rel="icon" type="image/x-icon"/>
+<style>  
         /* logo */
         .logo {
             position: absolute;
@@ -273,24 +272,23 @@
             }
         }
     </style>
-    
-</head>
+<meta content="Title: Unlim8ted Success page  2024 Unlim8ted Studio Productions . Learn more at Unlim8ted Studio Productions." name="description"/></head>
 <body>
-    <div id="inner-wrap">
-        <div class="logo" style="z-index: 2;">
-          <a href="/">
-            <img src="images/logo/logo.png"> <!--https://images.unlim8ted.com/logo/logo.png-->
-          </a>
-        </div>
-    <div class="container">
-        <h1>Success!</h1>
-        <p>Your operation was completed successfully.</p>
-        <a href="javascript:history.back()" class="back-button">Go Back</a>
-    </div>
-</body>
-    <!-- Copyright -->
-    <div style="margin-top: 20px;">
-        <p>&copy; 2024 Unlim8ted Studio Productions. All rights reserved.</p>
-      </div>
-    </div>
+<div id="inner-wrap">
+<div class="logo" style="z-index: 2;">
+<a href="/">
+<img src="images/logo/logo.png"/> <!--https://images.unlim8ted.com/logo/logo.png-->
+</a>
+</div>
+<div class="container">
+<h1>Success!</h1>
+<p>Your operation was completed successfully.</p>
+<a class="back-button" href="javascript:history.back()">Go Back</a>
+</div>
+</div></body>
+<!-- Copyright -->
+<div style="margin-top: 20px;">
+<p>© 2024 Unlim8ted Studio Productions. All rights reserved.</p>
+</div>
+
 </html>
